# map-builder

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakeLists.txt.autosave  main.cpp  main.cpp.autosave  main.h  test_pcda.pcd
include/: octothread.h
include/Defs/: defs.h  grabbedimage.h  occmethodtype.h  octopoint.h  voxel.h
include/Grabber/: grabber.h  kinect_grabber.h
include/Map/: gaussmap.h  map.h  octomap.h
include/Point/: point.h
include/Utilities/: img2pcl.h  observer.h  positionprovider.h
include/Visualizer/: Qvisualizer.h  visualizer.h
include/Voxel/: voxel.h
resources/: KinectModel.xml  config.xml  img2pcl.xml
src/: octothread.cpp
src/Defs/: grabbedimage.cpp  occmethodtype.cpp  voxel.cpp
src/Grabber/: kinect_grabber.cpp
src/Map/: gaussmap.cpp  octomap.cpp  octomap.cpp.autosave
src/Point/: octopoint.cpp
src/Utilities/: img2pcl.cpp  observer.cpp  positionprovider.cpp
src/Visualizer/: Qvisualizer.cpp
src/Voxel/: voxel.cpp
